  (Ian Clatworthy)

* ``bzr ignore`` gives a more informative message when existing
  version controlled files match the ignore pattern. (Neil
  Martinsen-Burrell, #248895)

* ``bzr send`` is faster on repositories with deep histories.
  (Ian Clatworthy)

* Progress bars now show the rate of network activity for
  ``bzr+ssh://`` and ``bzr://`` connections.  (Andrew Bennetts)

* Pushing to a stacked pack-format branch on a 1.12 or older smart server
  now takes many less round trips.  (Andrew Bennetts, Robert Collins,
  #294479)
  
* Streaming push can be done to older repository formats.  This is
  implemented using a new ``Repository.insert_stream_locked`` RPC.
  (Andrew Bennetts, Robert Collins)

* The "ignoring files outside view: .." message has been re-worded
  to "Ignoring files outside view. View is .." to reduce confusion
  about what was being considered and what was being ignored.
  (Ian Clatworthy)

* The ``long`` log formatter now shows [merge] indicators. If
  only one level of revisions is displayed and merges are found,
  the ``long`` and ``short`` log formatters now tell the user
  how to see the hidden merged revisions.  (Ian Clatworthy)

* Tildes are no longer escaped. No more %7Euser/project/branch!
  (Jonathan Lange)

Bug Fixes
*********

* Authentication plugins now receive all the parameters from the request
  itself (aka host, port, realm, path, etc). Previously, only the 
  authentication section name, username and encoded password were 
  provided. (Jean-Francois Roy)

* bzr gives a better message if an invalid regexp is passed to ``bzr log
  -m``.  (Anne Mohsen, Martin Pool)

* Fix "is not a stackable format" error when pushing a
  stackable-format branch with an unstackable-format repository to a
  destination with a default stacking policy.  (Andrew Bennetts)

* Fixed incorrect "Source format does not support stacking" warning
  when pushing to a smart server.  (Andrew Bennetts, #334114)
